# pcm

./: CMakeLists.txt  README.md  main.c  wav.h
scripts/: README.md  convert.php  convert12k16.php
